--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-3.0-or-later",
     "autoload": {
         "psr-4": {
-            "RayTracer\\": "src/"
+            "RayTracer\\": "src/",
+            "RayTracer\\Tests\\": "features/bootstrap"
         }
     },
     "require-dev": {
