--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         }
     },
     "require-dev": {
-        "behat/behat": "^3.10"
+        "behat/behat": "^3.10",
+        "phpstan/phpstan": "^1.3",
+        "rector/rector": "^0.12.12",
+        "friendsofphp/php-cs-fixer": "^3.4"
     },
     "authors": [
         {
