--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "behat/behat": "^3.10",
         "phpstan/phpstan": "^1.3",
         "rector/rector": "^0.12.12",
-        "friendsofphp/php-cs-fixer": "^3.4"
+        "friendsofphp/php-cs-fixer": "^3.4",
+        "sebastian/phpcpd": "^6.0"
     },
     "authors": [
         {
