--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "phpstan/phpstan": "^1.3",
         "rector/rector": "^0.12.12",
         "friendsofphp/php-cs-fixer": "^3.4",
-        "sebastian/phpcpd": "^6.0"
+        "sebastian/phpcpd": "^6.0",
+        "dvdoug/behat-code-coverage": "^5.2"
     },
     "authors": [
         {
