--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "autoload": {
         "psr-4": {
             "RayTracer\\": "src/",
+            "RayTracer\\Intersection\\": "src/Intersection",
             "RayTracer\\Tests\\": "features/bootstrap"
         }
     },
