--- a/behat.yml
+++ b/behat.yml
@@ -16,6 +16,10 @@ default:
             contexts:
                 - RayTracer\Tests\Context\MaterialContext
             paths: [ '%paths.base%/features/materials' ]
+        world:
+            contexts:
+                - RayTracer\Tests\Context\WorldContext
+            paths: [ '%paths.base%/features/world' ]
         puttingit_together:
             contexts:
                 - RayTracer\Tests\Context\PuttingTogetherContext
